<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment"
    android:background="@color/black">

    <Toolbar
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:title="@string/title_add_card"
        android:titleTextColor="@color/off_white"
        android:backgroundTint="@color/black"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:id="@+id/outlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/button_save_text"
        android:textColor="@color/off_white"
        android:textSize="16sp"
        android:backgroundTint="@color/black"
        app:strokeColor="@color/off_white"
        app:strokeWidth="1dp"
        app:elevation="0dp"
        app:rippleColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="@id/appBar"
        app:layout_constraintTop_toTopOf="@id/appBar"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textFieldTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_title"
        app:layout_constraintTop_toBottomOf="@id/appBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/color_stroke"
        app:boxBackgroundColor="@color/gray"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/textFieldAnotation"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/anotation_title"
        app:layout_constraintTop_toBottomOf="@id/textFieldTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="2dp"
        app:boxStrokeColor="@color/color_stroke"
        app:boxBackgroundColor="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/center"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>