<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/gray"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/text_task_concluded"
                android:textColor="@color/white"

                app:layout_constraintBottom_toTopOf="@id/buttonUnarchive"
                app:layout_constraintStart_toStartOf="@id/card"
                app:layout_constraintEnd_toEndOf="@id/card"
                app:layout_constraintTop_toTopOf="@id/card"/>

            <Button
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:id="@+id/buttonUnarchive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_restauring"
                android:textColor="@color/orange_01"
                android:textSize="16sp"
                app:strokeColor="@color/gray_hard"
                app:strokeWidth="0dp"
                app:elevation="0dp"
                app:rippleColor="?attr/colorOnSurface"
                app:icon="@drawable/ic_unarchive"
                app:iconTint="@color/orange_01"
                app:iconPadding="8dp"

                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toBottomOf="@id/card"
                app:layout_constraintEnd_toStartOf="@id/buttonDelete"
                />

            <Button
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:id="@+id/buttonDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_dialog_delete"
                android:textColor="@color/orange_01"
                android:textSize="16sp"
                app:strokeColor="@color/gray_hard"
                app:strokeWidth="0dp"
                app:elevation="0dp"
                app:rippleColor="?attr/colorOnSurface"
                app:icon="@drawable/ic_delete_24dp"
                app:iconTint="@color/orange_01"
                app:iconPadding="8dp"

                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintEnd_toEndOf="@id/card"
                app:layout_constraintBottom_toBottomOf="@id/card"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>