<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.home.HomeFragment">

    <Toolbar
        android:visibility="gone"
        android:id="@+id/toolbarBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_hard"
        android:padding="4dp"
        android:layout_marginEnd="6dp"
        android:layout_marginStart="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Você deseja"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonArchive"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arquivar"
                android:textColor="@color/orange_01"
                android:textSize="14sp"
                android:textStyle="bold"
                app:elevation="0dp"
                app:iconPadding="4dp"
                app:iconTint="@color/orange_01"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:rippleColor="@color/orange"
                app:strokeColor="@color/gray_hard"
                app:strokeWidth="0dp" />

            <Button
                android:id="@+id/buttonDelete"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apagar"
                android:textColor="@color/orange_01"
                android:textSize="14sp"
                android:textStyle="bold"
                android:icon="@drawable/ic_delete_24dp"
                app:elevation="0dp"
                app:iconPadding="4dp"
                app:iconTint="@color/orange_01"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:rippleColor="@color/orange"
                app:strokeColor="@color/gray_hard"
                app:strokeWidth="0dp" />
        </LinearLayout>

    </Toolbar>

    <Toolbar
        android:id="@+id/appBarFromHome"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/black"
        android:backgroundTint="@color/black"
        android:title="@string/title_my_tasks"
        android:titleTextColor="@color/off_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/black"
        android:text="@string/select_button_text"
        android:textColor="@color/off_white"
        app:layout_constraintBottom_toBottomOf="@id/appBarFromHome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/appBarFromHome"
        app:rippleColor="@color/orange" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notTaskFromHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCenter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/note_24dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:fontFamily="sans-serif-medium"
            android:paddingTop="8dp"
            android:text="@string/not_task_text"
            android:textColor="@color/off_white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageCenter" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintBottom_toTopOf="@id/toolbarBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarFromHome" />
</androidx.constraintlayout.widget.ConstraintLayout>